<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatRoom</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvAppName">Chat KOM</string>
    <string name="tvUserName">User Name:</string>
    <string name="etUserLogin">Email</string>
    <string name="tvUserPassword">Password:</string>
    <string name="user">**********</string>
    <string name="cbSaveUser">Save</string>
    <string name="btnLogin">Login</string>
    <string name="Login">Login</string>
    <string name="creator">zp.dv.KOM</string>
    <string name="Orientation">Orientation</string>
    <string name="etWriter">Message</string>
    <string name="btnSend">Send</string>

</resources>
