<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:id="@+id/tvCreator"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="10dp"
        android:textSize="17dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivApp"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/ic_launcher"
        android:layout_margin="20dp"
        android:contentDescription="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Orientation"
        android:id="@+id/textView"
        android:layout_gravity="right|bottom"
        android:padding="2dp"
        android:textStyle="italic"
        android:textSize="10dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="NewApi">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvAppName"
            android:id="@+id/tvAppName"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:textColor="#8cff0e" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUserName"
            android:id="@+id/tvLogin"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="5dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:id="@+id/etLogin"
            android:layout_row="1"
            android:layout_column="1"
            android:inputType="textEmailAddress"
            android:hint="@string/etUserLogin"
            android:layout_gravity="fill_horizontal|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUserPassword"
            android:id="@+id/tvPassword"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/etPassword"
            android:layout_row="2"
            android:layout_column="1"
            android:password="true"
            android:inputType="textPassword"
            android:hint="@string/user"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:selectAllOnFocus="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbSaveUser"
            android:id="@+id/cBSaveUser"
            android:layout_row="3"
            android:layout_column="0"
            android:checked="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/buttonLogin"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="onLogin" />
    </GridLayout>
</FrameLayout>